--- a/index.html
+++ b/index.html
@@ -242,18 +242,18 @@
           <div class="docSection">
             <div class="col-md-6 col-12">
               <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/quickguide.html">Getting Started</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/modeling.html">Modeling Guide</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/meshing.html">Meshing Guide</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/flowsolver.html">Simulation Guide</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/svfsi.html">svFSI Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/quickguide.html">Getting Started</a><br>
+              <a class="docLinks" target="_blank" href="documentation/modeling.html">Modeling Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/meshing.html">Meshing Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/flowsolver.html">Simulation Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/svfsi.html">svFSI Guide</a><br>
             </div>
             <div class="col-md-6 col-12">
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/simcardio.html">SimCardio Guide</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/rom_simulation.html">ROM Simulation Guide</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/genbc.html">General B.C. Guide</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/python_interface.html">Python Interface</a><br>
-              <a class="docLinks" target="_blank" href="documentation/htmlFiles/references.html">References</a><br>
+              <a class="docLinks" target="_blank" href="documentation/simcardio.html">SimCardio Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/rom_simulation.html">ROM Simulation Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/genbc.html">General B.C. Guide</a><br>
+              <a class="docLinks" target="_blank" href="documentation/python_interface.html">Python Interface</a><br>
+              <a class="docLinks" target="_blank" href="documentation/references.html">References</a><br>
               <a class="docLinks" target="_blank" href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
             </div>
           </div>
@@ -265,10 +265,10 @@
               Clinical Case Studies</h2> 
           </div>
           <div class="docSection">
-            <a class="docLinks" target="_blank" href="clinical/htmlFiles/coronary.html">Coronary Normal</a><br>
-            <a class="docLinks" target="_blank" href="clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a><br>
-            <a class="docLinks" target="_blank" href="clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a><br>
-            <a class="docLinks" target="_blank" href="clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>
+            <a class="docLinks" target="_blank" href="clinical/coronary.html">Coronary Normal</a><br>
+            <a class="docLinks" target="_blank" href="clinical/aortofemoral1.html">Aortofemoral Normal - 1</a><br>
+            <a class="docLinks" target="_blank" href="clinical/aortofemoral2.html">Aortofemoral Normal - 2</a><br>
+            <a class="docLinks" target="_blank" href="clinical/pulmonary.html">Healthy Pulmonary</a>
           </div>
           <div class="docHeader ">
             <h2 class="media-heading"><i class="iconInHeader fa-solid fa-laptop-code">
