update documentation links

--- a/documentation/python_interface.html
+++ b/documentation/python_interface.html
@@ -17,10 +17,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
     <script>
-      window.ZeroMdConfig = {
-        cssUrls: ["../../css/bootstrap.css","../../css/grayscale.css","../../css/standards.css","../../css/shop-item.css","../../css/documentation.css"]
-      }
-    </script>
+    window.ZeroMdConfig = {
+      cssUrls: ["../css/bootstrap.css","../css/grayscale.css","../css/standards.css","../css/shop-item.css","../css/documentation.css"]
+    }
+  </script>
     
     <script>
       window.MathJax = {
@@ -39,15 +39,15 @@
       ></script>
   
       <!-- browser tab labels -->
-      <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
-      <title>SimVascular</title>
-    </head>
+    <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
+    <title>SimVascular</title>
+  </head>
   <body>
     <section class="header">
       <div class="topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
           <div class="headerNavBar">
@@ -61,34 +61,34 @@
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/quickguide.html">Getting Started</p>
+                      <p href="quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/modeling.html">Modeling Guide</p> 
+                      <p href="modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/meshing.html">Meshing Guide</p> 
+                      <p href="meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/flowsolver.html">Simulation Guide</p> 
+                      <p href="flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/svfsi.html">svFSI Guide</p> 
+                      <p href="svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/simcardio.html">SimCardio Guide</p> 
+                      <p href="simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                      <p href="rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/genbc.html">General B.C. Guide</p> 
+                      <p href="genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/python_interface.html">Python Interface</p> 
+                      <p href="python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/references.html">References</p> 
+                      <p href="references.html">References</p> 
                     </div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
@@ -99,16 +99,16 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
+                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
                     </div>
                     <div class="navSubLink">
                       <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
@@ -165,58 +165,58 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="../python_interface/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/_intro.md" no-shadow></zero-md>
       </span>
       <span id="python_prog_env">
-        <zero-md class="embedMath" src="../python_interface/_python_prog_env.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/_python_prog_env.md" no-shadow></zero-md>
       </span>
       <span id="console">
-        <zero-md class="embedMath" src="../python_interface/_console.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/_console.md" no-shadow></zero-md>
       </span>
       <span id="console_mode">
-        <zero-md class="embedMath" src="../python_interface/_console_mode.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/_console_mode.md" no-shadow></zero-md>
       </span>
       <span id="text_edit_mode">
-        <zero-md class="embedMath" src="../python_interface/_text_edit_mode.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/_text_edit_mode.md" no-shadow></zero-md>
       </span>
       <span id="python_shell">
-        <zero-md class="embedMath" src="../python_interface/_python_shell.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/_python_shell.md" no-shadow></zero-md>
       </span>
       <span id="sv_modules">
-        <zero-md class="embedMath" src="../python_interface/modules/_sv_modules.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_sv_modules.md" no-shadow></zero-md>
       </span>
       <span id="projects">
-        <zero-md class="embedMath" src="../python_interface/modules/_projects.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_projects.md" no-shadow></zero-md>
       </span>
       <span id="help">
-        <zero-md class="embedMath" src="../python_interface/modules/_help.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_help.md" no-shadow></zero-md>
       </span>
       <span id="function_arguments">
-        <zero-md class="embedMath" src="../python_interface/modules/_function_arguments.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_function_arguments.md" no-shadow></zero-md>
       </span>
       <span id="error_handling">
-        <zero-md class="embedMath" src="../python_interface/modules/_error_handling.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_error_handling.md" no-shadow></zero-md>
       </span>
       <span id="dmg_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_dmg_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_dmg_module.md" no-shadow></zero-md>
       </span>
       <span id="geometry_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_geometry_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_geometry_module.md" no-shadow></zero-md>
       </span>
       <span id="meshing_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_meshing_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_meshing_module.md" no-shadow></zero-md>
       </span>
       <span id="modeling_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_modeling_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_modeling_module.md" no-shadow></zero-md>
       </span>
       <span id="path_planning_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_path_planning_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_path_planning_module.md" no-shadow></zero-md>
       </span>
       <span id="segmentation_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_segmentation_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_segmentation_module.md" no-shadow></zero-md>
       </span>
       <span id="vmtk_module">
-        <zero-md class="embedMath" src="../python_interface/modules/_vmtk_module.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="python_interface/modules/_vmtk_module.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -244,19 +244,15 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="../../js/jquery-2.1.1.js"></script>
+  <script src="../js/jquery-2.1.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
 
-
-
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
-  <script src="../../js/jquery.mixitup.min.js"></script>
+  <script src="../js/jquery.mixitup.min.js"></script>
 
-  
-
-  <script src="../../js/documentation.js"></script>
+  <script src="../js/documentation.js"></script>
 
 </body>
   
