--- a/documentation/modeling.html
+++ b/documentation/modeling.html
@@ -18,7 +18,7 @@
   
   <script>
     window.ZeroMdConfig = {
-      cssUrls: ["../../css/bootstrap.css","../../css/grayscale.css","../../css/standards.css","../../css/shop-item.css","../../css/documentation.css"]
+      cssUrls: ["../css/bootstrap.css","../css/grayscale.css","../css/standards.css","../css/shop-item.css","../css/documentation.css"]
     }
   </script>
   
@@ -39,7 +39,7 @@
     ></script>
 
     <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
+    <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
@@ -47,7 +47,7 @@
       <div class="topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
           <div class="headerNavBar">
@@ -61,34 +61,34 @@
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/quickguide.html">Getting Started</p>
+                      <p href="quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/modeling.html">Modeling Guide</p> 
+                      <p href="modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/meshing.html">Meshing Guide</p> 
+                      <p href="meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/flowsolver.html">Simulation Guide</p> 
+                      <p href="flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/svfsi.html">svFSI Guide</p> 
+                      <p href="svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/simcardio.html">SimCardio Guide</p> 
+                      <p href="simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                      <p href="rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/genbc.html">General B.C. Guide</p> 
+                      <p href="genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/python_interface.html">Python Interface</p> 
+                      <p href="python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/references.html">References</p> 
+                      <p href="references.html">References</p> 
                     </div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
@@ -99,16 +99,16 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
+                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
                     </div>
                     <div class="navSubLink">
                       <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
@@ -183,76 +183,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="modelingIntro">
-        <zero-md class="embedMath" src="../modeling/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_intro.md" no-shadow></zero-md>
       </span>
       <span id="modelingPathPlanning">
-        <zero-md class="embedMath" src="../modeling/_pathPlanning.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_pathPlanning.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingPath">
-        <zero-md class="embedMath" src="../modeling/_creatingPath.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_creatingPath.md" no-shadow></zero-md>
       </span>
       <span id="modelingSmoothingPath">
-        <zero-md class="embedMath" src="../modeling/_smoothingPath.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_smoothingPath.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingPaths">
-        <zero-md class="embedMath" src="../modeling/_importingExportingPaths.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_importingExportingPaths.md" no-shadow></zero-md>
       </span>
       <span id="modelingSegmentation">
-        <zero-md class="embedMath" src="../modeling/_segmentation.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_segmentation.md" no-shadow></zero-md>
       </span>
       <span id="modelingUsingGroups">
-        <zero-md class="embedMath" src="../modeling/_usingGroups.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_usingGroups.md" no-shadow></zero-md>
       </span>
       <span id="modelingThresholding">
-        <zero-md class="embedMath" src="../modeling/_thresholding.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_thresholding.md" no-shadow></zero-md>
       </span>
       <span id="modelingLevelSet">
-        <zero-md class="embedMath" src="../modeling/_levelSet.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_levelSet.md" no-shadow></zero-md>
       </span>
       <span id="modelingMachineLearning">
-        <zero-md class="embedMath" src="../modeling/_machinelearning.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_machinelearning.md" no-shadow></zero-md>
       </span>
       <span id="modelingManual">
-        <zero-md class="embedMath" src="../modeling/_manual.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_manual.md" no-shadow></zero-md>
       </span>
       <span id="modeling3DSeg">
-        <zero-md class="embedMath" src="../modeling/_3DSeg.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_3DSeg.md" no-shadow></zero-md>
       </span>
       <span id="modelingCopyingPastingContours">
-        <zero-md class="embedMath" src="../modeling/_copyingPastingContours.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_copyingPastingContours.md" no-shadow></zero-md>
       </span>
       <span id="modelingLoftingPreview">
-        <zero-md class="embedMath" src="../modeling/_loftingpreview.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_loftingpreview.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingGroups">
-        <zero-md class="embedMath" src="../modeling/_importingExportingGroups.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_importingExportingGroups.md" no-shadow></zero-md>
       </span>
       <span id="modelingSolidModelingPolyData">
-        <zero-md class="embedMath" src="../modeling/_solidModelingPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_solidModelingPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingModelsPolyData">
-        <zero-md class="embedMath" src="../modeling/_creatingModelsPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_creatingModelsPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingPolyDataFaces">
-        <zero-md class="embedMath" src="../modeling/_polyDataFaces.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_polyDataFaces.md" no-shadow></zero-md>
       </span>
       <span id="modelingEditingPolyData">
-        <zero-md class="embedMath" src="../modeling/_editingPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_editingPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingCenterlinesPolyData">
-        <zero-md class="embedMath" src="../modeling/_centerlinesPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_centerlinesPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingModels">
-        <zero-md class="embedMath" src="../modeling/_importingExportingModels.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_importingExportingModels.md" no-shadow></zero-md>
       </span>
       <span id="modelingSolidModelingAnalytic">
-        <zero-md class="embedMath" src="../modeling/_solidModelingAnalytic.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_solidModelingAnalytic.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingModelsAnalytic">
-        <zero-md class="embedMath" src="../modeling/_creatingModelsAnalytic.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_creatingModelsAnalytic.md" no-shadow></zero-md>
       </span>
       <span id="modelingBlendingAnalytic">
-        <zero-md class="embedMath" src="../modeling/_blendingAnalytic.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="modeling/_blendingAnalytic.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -280,19 +280,15 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="../../js/jquery-2.1.1.js"></script>
+  <script src="../js/jquery-2.1.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
 
-
-
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
-  <script src="../../js/jquery.mixitup.min.js"></script>
+  <script src="../js/jquery.mixitup.min.js"></script>
 
-  
-
-  <script src="../../js/documentation.js"></script>
+  <script src="../js/documentation.js"></script>
 
 </body>
   
