--- a/documentation/quickguide.html
+++ b/documentation/quickguide.html
@@ -18,7 +18,7 @@
   
   <script>
     window.ZeroMdConfig = {
-      cssUrls: ["../../css/bootstrap.css","../../css/grayscale.css","../../css/standards.css","../../css/shop-item.css","../../css/documentation.css"]
+      cssUrls: ["../css/bootstrap.css","../css/grayscale.css","../css/standards.css","../css/shop-item.css","../css/documentation.css"]
     }
   </script>
 
@@ -28,7 +28,7 @@
     ></script>
 
     <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
+    <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
       <div class="topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
           <div class="headerNavBar">
@@ -50,34 +50,34 @@
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/quickguide.html">Getting Started</p>
+                      <p href="quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/modeling.html">Modeling Guide</p> 
+                      <p href="modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/meshing.html">Meshing Guide</p> 
+                      <p href="meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/flowsolver.html">Simulation Guide</p> 
+                      <p href="flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/svfsi.html">svFSI Guide</p> 
+                      <p href="svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/simcardio.html">SimCardio Guide</p> 
+                      <p href="simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                      <p href="rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/genbc.html">General B.C. Guide</p> 
+                      <p href="genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/python_interface.html">Python Interface</p> 
+                      <p href="python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/references.html">References</p> 
+                      <p href="references.html">References</p> 
                     </div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
@@ -88,16 +88,16 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
+                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
                     </div>
                     <div class="navSubLink">
                       <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
@@ -166,76 +166,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="getting_started">
-        <zero-md src="../../documentation/quickguide/_getting_started.md"></zero-md>
+        <zero-md src="quickguide/_getting_started.md"></zero-md>
       </span>
       <span id="introduction">
-        <zero-md src="../documentation/quickguide/_intro.md"></zero-md>
+        <zero-md src="quickguide/_intro.md"></zero-md>
       </span>
       <span id="intro_pipeline">
-        <zero-md src=../documentation/quickguide/_intro_pipeline.md></zero-md>
+        <zero-md src="quickguide/_intro_pipeline.md"></zero-md>
       </span>
       <span id="intro_tools">
-        <zero-md src="/quickguide/_intro_tools.md"></zero-md>
+        <zero-md src="quickguide/_intro_tools.md"></zero-md>
       </span>
       <span id="intro_projects">
-        <zero-md src=/quickguide/_intro_projects.md></zero-md>
+        <zero-md src="quickguide/_intro_projects.md"></zero-md>
       </span>
       <span id="intro_mitk">
-        <zero-md src=../quickguide/_intro_mitk.md></zero-md>
+        <zero-md src="quickguide/_intro_mitk.md"></zero-md>
       </span>
       <span id="gui">
-        <zero-md src="../quickguide/gui/_intro.md"></zero-md>
+        <zero-md src="quickguide/gui/_intro.md"></zero-md>
       </span>
       <span id="menubar">
-        <zero-md src="/documentation/quickguide/gui/_menubar.md"></zero-md>
+        <zero-md src="quickguide/gui/_menubar.md"></zero-md>
       </span>
       <span id="toolbar">
-        <zero-md src="/documentation/quickguide/gui/_toolbar.md"></zero-md>
+        <zero-md src="quickguide/gui/_toolbar.md"></zero-md>
       </span>
       <span id="gui_display">
-        <zero-md src="/documentation/quickguide/gui/_display.md"></zero-md>
+        <zero-md src="quickguide/gui/_display.md"></zero-md>
       </span>
       <span id="image_windowing">
-        <zero-md src="/documentation/quickguide/gui/_image_windowing.md"></zero-md>
+        <zero-md src="quickguide/gui/_image_windowing.md"></zero-md>
       </span>
       <span id="gui_data_manager">
-        <zero-md src="/documentation/quickguide/gui/_data_manager.md"></zero-md>
+        <zero-md src="quickguide/gui/_data_manager.md"></zero-md>
       </span>
       <span id="gui_tool_panel">
-        <zero-md src="/documentation/quickguide/gui/_tool_panel.md"></zero-md>
+        <zero-md src="quickguide/gui/_tool_panel.md"></zero-md>
       </span>
       <span id="gui_image_navigator">
-        <zero-md src="/documentation/quickguide/gui/_image_navigator.md"></zero-md>
+        <zero-md src="quickguide/gui/_image_navigator.md"></zero-md>
       </span>
       <span id="tutorial">
-        <zero-md src="/documentation/quickguide/tutorial/_intro.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_intro.md"></zero-md>
       </span>
       <span id="tutorial_starting_simvascular">
-        <zero-md src="/documentation/quickguide/tutorial/_starting_simvascular.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_starting_simvascular.md"></zero-md>
       </span>
       <span id="tutorial_create_project">
-        <zero-md src="/documentation/quickguide/tutorial/_create_project.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_create_project.md"></zero-md>
       </span>
       <span id="tutorial_add_image_data">
-        <zero-md src="/documentation/quickguide/tutorial/_add_image_data.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_add_image_data.md"></zero-md>
       </span>
       <span id="tutorial_create_paths">
-        <zero-md src="/documentation/quickguide/tutorial/_create_paths.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_create_paths.md"></zero-md>
       </span>
       <span id="tutorial_create_segmentations">
-        <zero-md src="/documentation/quickguide/tutorial/_create_segmentations.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_create_segmentations.md"></zero-md>
       </span>
       <span id="tutorial_create_solid_model">
-        <zero-md src="/documentation/quickguide/tutorial/_create_solid_model.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_create_solid_model.md"></zero-md>
       </span>
       <span id="tutorial_create_finite_element_mesh">
-        <zero-md src="/documentation/quickguide/tutorial/_create_finite_element_mesh.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_create_finite_element_mesh.md"></zero-md>
       </span>
       <span id="tutorial_create_simulation">
-        <zero-md src="/documentation/quickguide/tutorial/_create_simulation.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_create_simulation.md"></zero-md>
       </span>
       <span id="tutorial_summary">
-        <zero-md src="/documentation/quickguide/tutorial/_summary.md"></zero-md>
+        <zero-md src="quickguide/tutorial/_summary.md"></zero-md>
       </span>
     </section>
   </section>
@@ -244,27 +244,23 @@
   </section>
 
   <!-- Style CSS -->
-  <link rel="stylesheet" href="../../css/bootstrap.css">
-  <link rel="stylesheet" href="../../css/grayscale.css">
-  <link rel="stylesheet" href="../../css/standards.css">
-  <link rel="stylesheet" href="../../css/documentation.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/grayscale.css">
+  <link rel="stylesheet" href="../css/standards.css">
+  <link rel="stylesheet" href="../cssdocumentation.css">
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="../../js/jquery-2.1.1.js"></script>
+  <script src="../js/jquery-2.1.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
 
-
-
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
-  <script src="../../js/jquery.mixitup.min.js"></script>
+  <script src="../js/jquery.mixitup.min.js"></script>
 
-  
-
-  <script src="../../js/documentation.js"></script>
+  <script src="../js/documentation.js"></script>
 
 </body>
   
