--- a/documentation/rom_simulation.html
+++ b/documentation/rom_simulation.html
@@ -18,7 +18,7 @@
   
   <script>
     window.ZeroMdConfig = {
-      cssUrls: ["../../css/bootstrap.css","../../css/grayscale.css","../../css/standards.css","../../css/shop-item.css","../../css/documentation.css"]
+      cssUrls: ["../css/bootstrap.css","../css/grayscale.css","../css/standards.css","../css/shop-item.css","../css/documentation.css"]
     }
   </script>
   
@@ -39,7 +39,7 @@
     ></script>
 
     <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
+    <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
     <title>SimVascular</title>
   </head>
   <body>
@@ -47,7 +47,7 @@
       <div class="topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
           <div class="headerNavBar">
@@ -61,34 +61,34 @@
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/quickguide.html">Getting Started</p>
+                      <p href="quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/modeling.html">Modeling Guide</p> 
+                      <p href="modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/meshing.html">Meshing Guide</p> 
+                      <p href="meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/flowsolver.html">Simulation Guide</p> 
+                      <p href="flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/svfsi.html">svFSI Guide</p> 
+                      <p href="svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/simcardio.html">SimCardio Guide</p> 
+                      <p href="simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                      <p href="rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/genbc.html">General B.C. Guide</p> 
+                      <p href="genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/python_interface.html">Python Interface</p> 
+                      <p href="python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/references.html">References</p> 
+                      <p href="references.html">References</p> 
                     </div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
@@ -99,16 +99,16 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
+                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
                     </div>
                     <div class="navSubLink">
                       <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
@@ -169,67 +169,67 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="../rom_simulation/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/_intro.md" no-shadow></zero-md>
       </span>
       <span id="tool">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_tool.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_tool.md" no-shadow></zero-md>
       </span>
       <span id="mesh-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_mesh-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_mesh-panel.md" no-shadow></zero-md>
       </span>
       <span id="basic-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_basic-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_basic-panel.md" no-shadow></zero-md>
       </span>
       <span id="bcs-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_bcs-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_bcs-panel.md" no-shadow></zero-md>
       </span>
       <span id="wall-props-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_wall-props-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_wall-props-panel.md" no-shadow></zero-md>
       </span>
       <span id="solver-params-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_solver-params-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_solver-params-panel.md" no-shadow></zero-md>
       </span>
       <span id="create-files-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_create-files-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_create-files-panel.md" no-shadow></zero-md>
       </span>
       <span id="convert-results-panel">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_convert-results-panel.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_convert-results-panel.md" no-shadow></zero-md>
       </span>
       <span id="tool-tutorial">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_tutorial.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_tutorial.md" no-shadow></zero-md>
       </span>
       <span id="tool-refs">
-        <zero-md class="embedMath" src="../rom_simulation/tool/_refs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/tool/_refs.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_solver.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_solver.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-theory">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_theory.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_theory.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-user-guide">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_user-guide.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_user-guide.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-input-file">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_input-file.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_input-file.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-example-bifurcation-rcr">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_example-bifurcation-rcr.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_example-bifurcation-rcr.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-example-tube-resistance">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_example-tube-resistance.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_example-tube-resistance.md" no-shadow></zero-md>
       </span>
       <span id="1d-solver-refs">
-        <zero-md class="embedMath" src="../rom_simulation/1d-solver/_refs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/1d-solver/_refs.md" no-shadow></zero-md>
       </span>
       <span id="0d-solver">
-        <zero-md class="embedMath" src="../rom_simulation/0d-solver/_solver.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/0d-solver/_solver.md" no-shadow></zero-md>
       </span>
       <span id="0d-solver-theory">
-        <zero-md class="embedMath" src="../rom_simulation/0d-solver/_theory.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/0d-solver/_theory.md" no-shadow></zero-md>
       </span>
       <span id="0d-solver-refs">
-        <zero-md class="embedMath" src="../rom_simulation/0d-solver/_refs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="rom_simulation/0d-solver/_refs.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -257,15 +257,15 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="../../js/jquery-2.1.1.js"></script>
+  <script src="../js/jquery-2.1.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
 
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
-  <script src="../../js/jquery.mixitup.min.js"></script>
+  <script src="../js/jquery.mixitup.min.js"></script>
 
-  <script src="../../js/documentation.js"></script>
+  <script src="../js/documentation.js"></script>
 
 </body>
   
