--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -18,7 +18,7 @@
     
     <script>
       window.ZeroMdConfig = {
-        cssUrls: ["../../css/bootstrap.css","../../css/grayscale.css","../../css/standards.css","../../css/shop-item.css","../../css/documentation.css"]
+        cssUrls: ["../css/bootstrap.css","../css/grayscale.css","../css/standards.css","../css/shop-item.css","../css/documentation.css"]
       }
     </script>
     
@@ -39,15 +39,15 @@
       ></script>
   
       <!-- browser tab labels -->
-      <link rel="shortcut icon" type="image/jpg" href="../../img/svIcon.png"></link>
-      <title>SimVascular</title>
-    </head>
+    <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
+    <title>SimVascular</title>
+  </head>
   <body>
     <section class="header">
       <div class="topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
           <!-- nav bar top right; same for all -->
           <div class="headerNavBar">
@@ -61,34 +61,34 @@
                       <p href="https://github.com/SimVascular/SimVascular/wiki//user_simvascular_software_suite_install">Installing SimVascular</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/quickguide.html">Getting Started</p>
+                      <p href="quickguide.html">Getting Started</p>
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/modeling.html">Modeling Guide</p> 
+                      <p href="modeling.html">Modeling Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/meshing.html">Meshing Guide</p> 
+                      <p href="meshing.html">Meshing Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/flowsolver.html">Simulation Guide</p> 
+                      <p href="flowsolver.html">Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/svfsi.html">svFSI Guide</p> 
+                      <p href="svfsi.html">svFSI Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/simcardio.html">SimCardio Guide</p> 
+                      <p href="simcardio.html">SimCardio Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/rom_simulation.html">ROM Simulation Guide</p> 
+                      <p href="rom_simulation.html">ROM Simulation Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/genbc.html">General B.C. Guide</p> 
+                      <p href="genbc.html">General B.C. Guide</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/python_interface.html">Python Interface</p> 
+                      <p href="python_interface.html">Python Interface</p> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../htmlFiles/references.html">References</p> 
+                      <p href="references.html">References</p> 
                     </div>
                     <div class="navSubLink">
                       <p href="https://github.com/SimVascular/SimVascular/wiki/wiki_for_users">FAQ &amp; Wiki</a>
@@ -99,16 +99,16 @@
                   <summary class="navTitle">Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/coronary.html">Coronary Normal</a>                  
+                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/htmlFiles/pulmonary.html">Healthy Pulmonary</a>                  
+                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
                     </div>
                     <div class="navSubLink">
                       <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
@@ -200,124 +200,124 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="../simcardio/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/_intro.md" no-shadow></zero-md>
       </span>
       <span id="automatic-cardiac-modeling">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_auto-cardiac-modeling.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_auto-cardiac-modeling.md" no-shadow></zero-md>
       </span>
       <span id="seg-intro">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_seg-intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-intro.md" no-shadow></zero-md>
       </span>
       <span id="seg-inputs">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_seg-inputs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-inputs.md" no-shadow></zero-md>
       </span>
       <span id="seg-pre-trained-models">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_seg-pre-trained-models.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-pre-trained-models.md" no-shadow></zero-md>
       </span>
       <span id="seg-predict">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_seg-predict.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-predict.md" no-shadow></zero-md>
       </span>
       <span id="seg-visualize">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_seg-visualize.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_seg-visualize.md" no-shadow></zero-md>
       </span>
       <span id="mesh-intro">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_mesh-intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-intro.md" no-shadow></zero-md>
       </span>
       <span id="mesh-lv-surface">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_mesh-lv-surface.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-lv-surface.md" no-shadow></zero-md>
       </span>
       <span id="mesh-volume">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_mesh-volume.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-volume.md" no-shadow></zero-md>
       </span>
       <span id="mesh-register">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_mesh-register.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-register.md" no-shadow></zero-md>
       </span>
       <span id="mesh-motion">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_mesh-motion.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_mesh-motion.md" no-shadow></zero-md>
       </span>
       <span id="refs">
-        <zero-md class="embedMath" src="../simcardio/cardiacModeling/_refs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/cardiacModeling/_refs.md" no-shadow></zero-md>
       </span>
       <span id="cep-modeling">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-modeling.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-modeling.md" no-shadow></zero-md>
       </span>
       <span id="cep-intro">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-intro.md" no-shadow></zero-md>
       </span>
       <span id="cep-theory">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-theory.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-theory.md" no-shadow></zero-md>
       </span>
       <span id="cep-activation-models">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-activation-models.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-activation-models.md" no-shadow></zero-md>
       </span>
       <span id="purkinje">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_purkinje.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_purkinje.md" no-shadow></zero-md>
       </span>
       <span id="pnet-intro">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_pnet-intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-intro.md" no-shadow></zero-md>
       </span>
       <span id="pnet-install">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_pnet-install.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-install.md" no-shadow></zero-md>
       </span>
       <span id="pnet-workflow">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_pnet-workflow.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-workflow.md" no-shadow></zero-md>
       </span>
       <span id="pnet-parameters">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_pnet-parameters.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-parameters.md" no-shadow></zero-md>
       </span>
       <span id="pnet-issues">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_pnet-issues.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_pnet-issues.md" no-shadow></zero-md>
       </span>
       <span id="cep-examples">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-examples.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-examples.md" no-shadow></zero-md>
       </span>
       <span id="cep-example-block">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-example-block.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-example-block.md" no-shadow></zero-md>
       </span>
       <span id="cep-example-pnet">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-example-pnet.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-example-pnet.md" no-shadow></zero-md>
       </span>
       <span id="cep-refs">
-        <zero-md class="embedMath" src="../simcardio/electrophysiology/_cep-refs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/electrophysiology/_cep-refs.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-modeling">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-modeling.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-modeling.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-solve">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-solve.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-solve.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-obtain-svFSI">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-obtain-svFSI.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-obtain-svFSI.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-mesh-gen">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-mesh-gen.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-mesh-gen.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-fiber-gen">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-fiber-gen.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-fiber-gen.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-solver-input">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-solver-input.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-solver-input.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-simulation">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-simulation.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-simulation.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-theory">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-theory.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-theory.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-kinematics">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-kinematics.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-kinematics.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-struct">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-struct.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-struct.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-ustruct">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-ustruct.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-ustruct.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-material-models">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-material-models.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-material-models.md" no-shadow></zero-md>
       </span>
       <span id="mechanics-refs">
-        <zero-md class="embedMath" src="../simcardio/mechanics/_mechanics-refs.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="simcardio/mechanics/_mechanics-refs.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
@@ -345,15 +345,15 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
-  <script src="../../js/jquery-2.1.1.js"></script>
+  <script src="../js/jquery-2.1.1.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.21/jquery.csv.min.js"></script>
 
   <!-- <script src="js/jquery-2.1.1.js"></script> -->
-  <script src="../../js/jquery.mixitup.min.js"></script>
+  <script src="../js/jquery.mixitup.min.js"></script>
 
-  <script src="../../js/documentation.js"></script>
+  <script src="../js/documentation.js"></script>
 
 </body>
   
