update logo link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     <div class="topLeftLogo">      
       <div class="headerLogoContainer">
-        <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
+        <img id="logo" class="headerLogoImage" src="img/svLogoTitle.png" alt="SimVascular Logo"></img>
       </div>
     </div>
   </section>
