--- a/documentation/quickguide.html
+++ b/documentation/quickguide.html
@@ -247,7 +247,7 @@
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/grayscale.css">
   <link rel="stylesheet" href="../css/standards.css">
-  <link rel="stylesheet" href="../cssdocumentation.css">
+  <link rel="stylesheet" href="../css/documentation.css">
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
